# pihole-switch

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: main.yml  pr.yml  release.yml
scripts/: create-github-release.sh  create-zip.sh
src/: lib.rs  main.rs  pihole.rs  resolve_api_token.rs
src/cli/: io.rs  mod.rs  root_command.rs
src/pihole/: config.rs  disable_time.rs  error.rs  mod.rs  request.rs
tests/: cli_tests.rs  pihole_tests.rs
tests/support/: mod.rs  pihole_response.rs  pihole_server.rs
