[package]
name = "pihole-switch"
version = "1.1.0"
authors = ["devmatteini <dev.matteini@gmail.com>"]
edition = "2021"
description = "A command line tool to enable/disable your pihole"
documentation = "https://github.com/devmatteini/pihole-switch"
readme = "README.md"
homepage = "https://github.com/devmatteini/pihole-switch"
repository = "https://github.com/devmatteini/pihole-switch"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["pihole", "cli"]

[[bin]]
name = "phs"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
serde_json = "1.0.81"
structopt = "0.3.20"
ansi_term = "0.12.1"

[dependencies.ureq]
version = "1.5.1"
default-features = false
features = ["json"]

[dev-dependencies]
serial_test = "0.7.0"
serde_json = "1.0.81"
url = "2.2.2"
assert_cmd = "2.0.4"
predicates = "2.1.1"
